--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -1,24 +1,174 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dgi-K5-xah">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9NE-ou-NmP">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="Pw8-0b-kh8" detailTextLabel="NUn-z5-0zz" style="IBUITableViewCellStyleSubtitle" id="123-5j-vzN">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="123-5j-vzN" id="R03-M0-0OU">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Pw8-0b-kh8">
+                                                    <rect key="frame" x="20" y="6.0000000000000009" width="25" height="14.333333333333334"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="NUn-z5-0zz">
+                                                    <rect key="frame" x="19.999999999999996" y="22.333333333333336" width="43.666666666666664" height="14.333333333333334"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9NE-ou-NmP" secondAttribute="trailing" id="MEk-9y-NeF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9NE-ou-NmP" secondAttribute="bottom" id="ZNx-5H-Aaq"/>
+                            <constraint firstItem="9NE-ou-NmP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bBl-5c-iGL"/>
+                            <constraint firstItem="9NE-ou-NmP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="f2j-ev-wU7"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Pcf-7R-4LB">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="AEb-QF-RXV">
+                            <connections>
+                                <segue destination="jXH-tP-xcJ" kind="show" id="yZW-uk-5hu"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="9NE-ou-NmP" id="olo-xH-FBN"/>
+                        <segue destination="jXH-tP-xcJ" kind="show" identifier="cellSegue" id="hd2-kJ-QLj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="947.32824427480909" y="3.5211267605633805"/>
+        </scene>
+        <!--Input View Controller-->
+        <scene sceneID="CkL-rm-FtQ">
+            <objects>
+                <viewController id="jXH-tP-xcJ" customClass="InputViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RaD-MO-qoI">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="goo-OV-acn">
+                                <rect key="frame" x="10" y="113" width="373" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jn3-GK-U7d">
+                                <rect key="frame" x="10" y="144" width="373" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F0f-9v-xrl">
+                                <rect key="frame" x="10" y="188" width="373" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fv5-vI-Dfe">
+                                <rect key="frame" x="10" y="219" width="373" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="RQ4-ye-I4e"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="TQu-5o-QKU">
+                                <rect key="frame" x="10" y="349" width="393" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="Uaj-EU-atK"/>
+                                </constraints>
+                            </datePicker>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="1sq-d6-mjW"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="TQu-5o-QKU" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="7Hb-5D-Ta2"/>
+                            <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="F0f-9v-xrl" secondAttribute="trailing" constant="10" id="87D-T8-PEM"/>
+                            <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="Fv5-vI-Dfe" secondAttribute="trailing" constant="10" id="8SB-LA-og9"/>
+                            <constraint firstItem="F0f-9v-xrl" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="CIA-7L-aVa"/>
+                            <constraint firstItem="TQu-5o-QKU" firstAttribute="top" secondItem="Fv5-vI-Dfe" secondAttribute="bottom" constant="10" id="Dzi-Ly-Dl7"/>
+                            <constraint firstItem="Fv5-vI-Dfe" firstAttribute="top" secondItem="F0f-9v-xrl" secondAttribute="bottom" constant="10" id="GH5-gV-T8t"/>
+                            <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="goo-OV-acn" secondAttribute="trailing" constant="10" id="KHc-LF-h9P"/>
+                            <constraint firstItem="goo-OV-acn" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="PEW-D6-2el"/>
+                            <constraint firstItem="Jn3-GK-U7d" firstAttribute="top" secondItem="goo-OV-acn" secondAttribute="bottom" constant="10" id="RdO-Ch-ZEc"/>
+                            <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="Jn3-GK-U7d" secondAttribute="trailing" constant="10" id="bie-QW-NZz"/>
+                            <constraint firstItem="TQu-5o-QKU" firstAttribute="trailing" secondItem="1sq-d6-mjW" secondAttribute="trailing" constant="10" id="d8S-HG-A3o"/>
+                            <constraint firstItem="Jn3-GK-U7d" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="dAt-SR-xGr"/>
+                            <constraint firstItem="F0f-9v-xrl" firstAttribute="top" secondItem="Jn3-GK-U7d" secondAttribute="bottom" constant="10" id="jpR-bN-Xj2"/>
+                            <constraint firstItem="goo-OV-acn" firstAttribute="top" secondItem="1sq-d6-mjW" secondAttribute="top" constant="10" id="pwy-j4-ust"/>
+                            <constraint firstItem="Fv5-vI-Dfe" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="q5d-S5-mJE"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="mrm-Wd-B1O"/>
+                    <connections>
+                        <outlet property="contentsTextField" destination="Fv5-vI-Dfe" id="Len-x7-Rmh"/>
+                        <outlet property="datePicker" destination="TQu-5o-QKU" id="g9a-Td-RLE"/>
+                        <outlet property="titleTextField" destination="Jn3-GK-U7d" id="keZ-LY-jAM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iM9-2J-vXb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1913.740458015267" y="3.5211267605633805"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qd7-Ot-dxS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dgi-K5-xah" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1Ko-ED-FbO">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <navigationBarAppearance key="scrollEdgeAppearance"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Yvv-us-gJp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="78A-bf-ge1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="20.610687022900763" y="3.5211267605633805"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="hd2-kJ-QLj"/>
+    </inferredMetricsTieBreakers>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
