--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9NE-ou-NmP">
-                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <rect key="frame" x="0.0" y="159" width="393" height="659"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="Pw8-0b-kh8" detailTextLabel="NUn-z5-0zz" style="IBUITableViewCellStyleSubtitle" id="123-5j-vzN">
@@ -46,14 +46,24 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="nae-Qn-Zzh">
+                                <rect key="frame" x="0.0" y="103" width="393" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="U52-g0-Ras"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9NE-ou-NmP" secondAttribute="trailing" id="MEk-9y-NeF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9NE-ou-NmP" secondAttribute="bottom" id="ZNx-5H-Aaq"/>
-                            <constraint firstItem="9NE-ou-NmP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bBl-5c-iGL"/>
-                            <constraint firstItem="9NE-ou-NmP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="f2j-ev-wU7"/>
+                            <constraint firstItem="9NE-ou-NmP" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="1YC-Ag-M7j"/>
+                            <constraint firstItem="9NE-ou-NmP" firstAttribute="top" secondItem="nae-Qn-Zzh" secondAttribute="bottom" id="6aB-wk-9lF"/>
+                            <constraint firstItem="nae-Qn-Zzh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Buy-j6-5U7"/>
+                            <constraint firstItem="9NE-ou-NmP" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="H02-NK-Mix"/>
+                            <constraint firstItem="nae-Qn-Zzh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WCa-RZ-QQo"/>
+                            <constraint firstItem="9NE-ou-NmP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mYb-4g-7IF"/>
+                            <constraint firstAttribute="trailing" secondItem="nae-Qn-Zzh" secondAttribute="trailing" id="rih-ix-DJh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Pcf-7R-4LB">
@@ -64,6 +74,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchBar" destination="nae-Qn-Zzh" id="s3x-ms-q4a"/>
                         <outlet property="tableView" destination="9NE-ou-NmP" id="olo-xH-FBN"/>
                         <segue destination="jXH-tP-xcJ" kind="show" identifier="cellSegue" id="hd2-kJ-QLj"/>
                     </connections>
@@ -91,50 +102,71 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F0f-9v-xrl">
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="TQu-5o-QKU">
+                                <rect key="frame" x="0.0" y="424" width="393" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="QBA-wx-I6f"/>
+                                </constraints>
+                            </datePicker>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DgB-5T-Npr">
+                                <rect key="frame" x="10" y="294" width="373" height="120"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="m1v-2O-QFi"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリー" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYX-er-kuw">
                                 <rect key="frame" x="10" y="188" width="373" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fv5-vI-Dfe">
-                                <rect key="frame" x="10" y="219" width="373" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="RQ4-ye-I4e"/>
-                                </constraints>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ng3-o4-Zde">
+                                <rect key="frame" x="10" y="219" width="373" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="TQu-5o-QKU">
-                                <rect key="frame" x="10" y="349" width="393" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="Uaj-EU-atK"/>
-                                </constraints>
-                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F0f-9v-xrl">
+                                <rect key="frame" x="10" y="263" width="373" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1sq-d6-mjW"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="TQu-5o-QKU" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="7Hb-5D-Ta2"/>
-                            <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="F0f-9v-xrl" secondAttribute="trailing" constant="10" id="87D-T8-PEM"/>
-                            <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="Fv5-vI-Dfe" secondAttribute="trailing" constant="10" id="8SB-LA-og9"/>
-                            <constraint firstItem="F0f-9v-xrl" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="CIA-7L-aVa"/>
-                            <constraint firstItem="TQu-5o-QKU" firstAttribute="top" secondItem="Fv5-vI-Dfe" secondAttribute="bottom" constant="10" id="Dzi-Ly-Dl7"/>
-                            <constraint firstItem="Fv5-vI-Dfe" firstAttribute="top" secondItem="F0f-9v-xrl" secondAttribute="bottom" constant="10" id="GH5-gV-T8t"/>
+                            <constraint firstItem="pYX-er-kuw" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="0wN-kb-dIc"/>
+                            <constraint firstItem="DgB-5T-Npr" firstAttribute="top" secondItem="F0f-9v-xrl" secondAttribute="bottom" constant="10" id="D4S-uK-6AR"/>
+                            <constraint firstItem="ng3-o4-Zde" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="KHb-62-fMj"/>
                             <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="goo-OV-acn" secondAttribute="trailing" constant="10" id="KHc-LF-h9P"/>
+                            <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="pYX-er-kuw" secondAttribute="trailing" constant="10" id="MxQ-wS-4cS"/>
+                            <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="DgB-5T-Npr" secondAttribute="trailing" constant="10" id="NBV-b8-KZs"/>
+                            <constraint firstItem="pYX-er-kuw" firstAttribute="top" secondItem="Jn3-GK-U7d" secondAttribute="bottom" constant="10" id="OeE-u3-ew6"/>
                             <constraint firstItem="goo-OV-acn" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="PEW-D6-2el"/>
+                            <constraint firstAttribute="trailing" secondItem="TQu-5o-QKU" secondAttribute="trailing" id="R6X-Ha-4Ao"/>
                             <constraint firstItem="Jn3-GK-U7d" firstAttribute="top" secondItem="goo-OV-acn" secondAttribute="bottom" constant="10" id="RdO-Ch-ZEc"/>
+                            <constraint firstItem="DgB-5T-Npr" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="WOh-lV-cOj"/>
+                            <constraint firstItem="TQu-5o-QKU" firstAttribute="top" secondItem="DgB-5T-Npr" secondAttribute="bottom" constant="10" id="Ysu-UE-td3"/>
+                            <constraint firstItem="TQu-5o-QKU" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" id="akV-XL-hjj"/>
                             <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="Jn3-GK-U7d" secondAttribute="trailing" constant="10" id="bie-QW-NZz"/>
-                            <constraint firstItem="TQu-5o-QKU" firstAttribute="trailing" secondItem="1sq-d6-mjW" secondAttribute="trailing" constant="10" id="d8S-HG-A3o"/>
                             <constraint firstItem="Jn3-GK-U7d" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="dAt-SR-xGr"/>
-                            <constraint firstItem="F0f-9v-xrl" firstAttribute="top" secondItem="Jn3-GK-U7d" secondAttribute="bottom" constant="10" id="jpR-bN-Xj2"/>
+                            <constraint firstItem="F0f-9v-xrl" firstAttribute="top" secondItem="ng3-o4-Zde" secondAttribute="bottom" constant="10" id="iLI-gq-3uf"/>
+                            <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="ng3-o4-Zde" secondAttribute="trailing" constant="10" id="n8M-Yd-QcA"/>
+                            <constraint firstItem="ng3-o4-Zde" firstAttribute="top" secondItem="pYX-er-kuw" secondAttribute="bottom" constant="10" id="odN-bi-ruD"/>
                             <constraint firstItem="goo-OV-acn" firstAttribute="top" secondItem="1sq-d6-mjW" secondAttribute="top" constant="10" id="pwy-j4-ust"/>
-                            <constraint firstItem="Fv5-vI-Dfe" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="q5d-S5-mJE"/>
+                            <constraint firstItem="1sq-d6-mjW" firstAttribute="trailing" secondItem="F0f-9v-xrl" secondAttribute="trailing" constant="10" id="t3f-go-SbU"/>
+                            <constraint firstItem="F0f-9v-xrl" firstAttribute="leading" secondItem="1sq-d6-mjW" secondAttribute="leading" constant="10" id="zh2-Ta-fzS"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="mrm-Wd-B1O"/>
                     <connections>
-                        <outlet property="contentsTextField" destination="Fv5-vI-Dfe" id="Len-x7-Rmh"/>
+                        <outlet property="categoryField" destination="ng3-o4-Zde" id="Fqn-2F-XDH"/>
+                        <outlet property="contentsTextView" destination="DgB-5T-Npr" id="eBw-8h-sS7"/>
                         <outlet property="datePicker" destination="TQu-5o-QKU" id="g9a-Td-RLE"/>
                         <outlet property="titleTextField" destination="Jn3-GK-U7d" id="keZ-LY-jAM"/>
                     </connections>
@@ -164,9 +196,12 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="hd2-kJ-QLj"/>
+        <segue reference="yZW-uk-5hu"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
